--- a/templates/partials/navbar.twig
+++ b/templates/partials/navbar.twig
@@ -15,7 +15,7 @@
           <a class="nav-link" href="?page=tickets">Tickets</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-danger" href="?page=logout">Logout</a>
+          <a href="?page=logout" class="btn btn-danger btn-sm">Logout</a>
         </li>
       </ul>
     </div>
